# pet-sitter-server/src/reviews/inputs/create-review.input.ts
@@ -1,0 +1,16 @@
+import { InputType, Field, Int } from '@nestjs/graphql';
+import { IsInt, IsOptional, IsString, Max, Min } from 'class-validator';
+
+@InputType()
+export class CreateReviewInput {
+  @Field(() => Int)
+  @IsInt()
+  @Min(1)
+  @Max(5)
+  rating: number;
+
+  @Field(() => String, { nullable: true })
+  @IsOptional()
+  @IsString()
+  comment?: string;
+}
