# pet-sitter-server/src/reviews/models/review.model.ts
@@ -1,0 +1,28 @@
+import { ObjectType, Field, ID, Int } from '@nestjs/graphql';
+
+@ObjectType()
+export class ReviewModel {
+  @Field(() => ID)
+  id: string;
+
+  @Field(() => Int)
+  rating: number;
+
+  @Field(() => String, { nullable: true })
+  comment: string | null;
+
+  @Field()
+  reviewer_id: string;
+
+  @Field()
+  reviewee_id: string;
+
+  @Field()
+  job_id: string;
+
+  @Field()
+  createdAt: Date;
+
+  @Field()
+  updatedAt: Date;
+}
